@@ -1,4 +1,4 @@
-image: "ruby:2.1"
+image: "registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.1"
 
 services:
   - mysql:latest
@@ -132,7 +132,7 @@ spinach 9 10: *spinach-knapsack
 # Execute all testing suites against Ruby 2.2
 
 .ruby-22: &ruby-22
-  image: "ruby:2.2"
+  image: "registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.2"
   only:
     - master
   cache:
